# z3_metamodel

./: Makefile  README.md  boxplot_generation.py  evaluate_model.py  pyproject.toml  requirements.txt  sat_benchmark.py  setup.py  test.py  test_clonables.py  test_constraints_attributes.py  z3_benchmark.py  z3_benchmark_metrics.py  z3_benchmark_metrics_results.csv  z3_benchmark_results_tactics1.csv  z3_benchmark_results_tactics2.csv  z3_benchmark_results_tactics3.csv  z3_benchmark_results_tactics5.csv  z3_benchmark_results_tactics6.csv
.github/workflows/: main.yml  release.yml
custom_operations/: pysat_configurations_number.py  z3_attribute_optimization.py  z3_configurations_number.py
evaluation/: .Rhistory  analysis.R  operations_features.R  sat_benchmark_results.csv  tactic1.csv  tactic2.csv  tactic3.csv  tactic4.csv  z3_benchmark_results_tactics4.csv  z3_benchmark_results_tactics7.csv  z3_benchmark_results_tactics8.csv  z3_benchmark_results_tactics9.csv
resources/configs/: icecream_attributes.json  pizza_z3_config1.json  pizza_z3_config2.json
resources/models/: fm08_clones_2.uvl  fm09_clones_2.uvl  fm09_clones_3.uvl  fm10_constraints.uvl
resources/models/error/: Pizza_z3_extended1000.uvl
resources/models/testing_models/: Electricity_unsat.uvl  Electricity_with_no_deadfeature.uvl  fm01_z3.uvl  fm02_integer_bounded.uvl  fm05_string_unbounded.uvl  fm06_string_bounded.uvl  fm09_real_bounded.uvl  fm11_real_bounded_infinite.uvl  fm_variable_bounds03.uvl  fm_variable_bounds05.uvl  icecream_attributes.uvl  (+1 more)
tests/: test_z3_metamodel.py
tests/models/: fm02.uvl  fm03.uvl  fm04.uvl  fm05.uvl  fm06.uvl  fm08_clones_3_manual.uvl
(+35 files in other folders)
